# GoogleTest

./: README.md  环境搭建.docx  环境搭建（ubuntu）.docx
googletest-release-1.12.1/: CMakeLists.txt
googletest-release-1.12.1/build_pc/: CMakeCache.txt
googletest-release-1.12.1/build_tda4x/: CMakeCache.txt
report_tool/gtest2html-master/: AUI_Test_result.xml  report.html
sample_src_code/: test_src.cpp  test_src.h
src_code/: test_src.cpp  test_src.h
test_code/: Readme.txt
test_code/AUI_test/: main.cpp
test_code/AUI_test/build_pc/: CMakeLists.txt
test_code/AUI_test/build_tda4x/: CMakeLists.txt
test_code/AUI_test/common/: common.cpp  common.h
test_code/AUI_test/doc/: AUI测试用例(TDA4X).xlsx  ~$AUI测试用例(TDA4X).xlsx
test_code/AUI_test/include/: aui_aicontrol_test.h  aui_mcu_test.h  aui_shader_test.h  aui_test.h
test_code/AUI_test/src/: aui_aicontrol_test.cpp  aui_mcu_test.cpp  aui_mcu_test.h  aui_shader_test.cpp  aui_test.cpp
test_code/AUI_test/src/common/: common.cpp  common.h
test_code/AUI_test/src/test_src/: aui_aicontrol_test.cpp  aui_aicontrol_test.h  aui_mcu_test.cpp  aui_shader_test.cpp
test_code/TauristarPlatform_test/: main.cpp
test_code/TauristarPlatform_test/build_pc/: CMakeLists.txt
test_code/TauristarPlatform_test/build_tda4x/: CMakeLists.txt  tda4x.cmake
test_code/TauristarPlatform_test/include/: ts_test.h
test_code/TauristarPlatform_test/src/: ts_test.cpp
test_code/mytest/: CMakeLists.txt
test_code/mytest/include/: mytest.h
test_code/mytest/src/: mytest.cpp
test_code/sample_model/: CMakeLists.txt  main.cpp
test_code/sample_model/build_pc/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  mytest
test_code/sample_model/build_tda4x/: CMakeLists.txt
test_code/sample_model/include/: mytest.h
test_code/sample_model/src/: mytest.cpp
